--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,14 @@
+Flask==0.10.1
+Jinja2==2.7.1
+MarkupSafe==0.18
 PyYAML==3.10
+Werkzeug==0.9.4
 amqp==1.0.13
 anyjson==0.3.3
 billiard==2.7.3.34
 celery==3.0.24
 celery-with-redis==3.0
+itsdangerous==0.23
 kombu==2.5.16
 oauthlib==0.6.0
 python-dateutil==2.2
